--- a/.github/workflows/ARMv8-config.yml
+++ b/.github/workflows/ARMv8-config.yml
@@ -14,10 +14,10 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: armv8/feeds.conf.default
-  CONFIG_FILE: armv8/armv8.config
-  DIY_P1_SH: armv8/diy-part1.sh
-  DIY_P2_SH: armv8/diy-part2.sh
+  FEEDS_CONF: feeds_config/lean.feeds.conf.default
+  CONFIG_FILE: config/leanlede_config/armv8.config
+  DIY_P1_SH: diy_script/lean_diy/armv8/diy-part1.sh
+  DIY_P2_SH: diy_script/lean_diy/armv8/diy-part2.sh
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: false
   CONFIG: armv8
