--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -20,8 +20,8 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: feeds_config/feeds.conf.default
-  CONFIG_FILE: diy_script/lean_diy/armv8/armv8.config
+  FEEDS_CONF: feeds_config/lean.feeds.conf.default
+  CONFIG_FILE: config/leanlede_config/armv8.config
   DIY_P1_SH: diy_script/lean_diy/armv8/diy-part1.sh
   DIY_P2_SH: diy_script/lean_diy/armv8/diy-part2.sh
   UPLOAD_BIN_DIR: false
