--- a/.github/workflows/Build_X86_64[Docker].yml
+++ b/.github/workflows/Build_X86_64[Docker].yml
@@ -40,11 +40,11 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: x86/x86-docker.config
-  DIY_P1_SH: x86/diy-part1.sh
-  DIY_P2_SH: x86/diy-part2.sh
-  DOCKER_SH: x86/docker.sh
+  FEEDS_CONF: feeds_config/lean.feeds.conf.default
+  CONFIG_FILE: config/leanlede_config/x86-docker.config
+  DIY_P1_SH: diy_script/lean_diy/x86/diy-part1.sh
+  DIY_P2_SH: diy_script/lean_diy/x86/diy-part2.sh
+  DOCKER_SH: diy_script/lean_diy/x86/docker.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_CONFIG: true
   UPLOAD_FIRMWARE: false
