--- a/.github/workflows/x86_64_LuciApp.yml
+++ b/.github/workflows/x86_64_LuciApp.yml
@@ -12,11 +12,11 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: x86/x86-64.config
+  FEEDS_CONF: feeds_config/lean.feeds.conf.default
+  CONFIG_FILE: config/leanlede_config/x86-64.config
   EXTERNAL_FILE: x86/x86-LuciApp.config
-  DIY_P1_SH: x86/diy-part1.sh
-  DIY_P2_SH: x86/diy-part2.sh
+  DIY_P1_SH: diy_script/lean_diy/x86/diy-part1.sh
+  DIY_P2_SH: diy_script/lean_diy/x86/diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_CONFIG: true
   UPLOAD_FIRMWARE: false
