--- a/config/leanlede_config/armv8.config
+++ b/config/leanlede_config/armv8.config
@@ -7362,7 +7362,7 @@ CONFIG_PACKAGE_udpxy=y
 # CONFIG_PACKAGE_unetd is not set
 # CONFIG_PACKAGE_usbip is not set
 # CONFIG_PACKAGE_usteer is not set
-CONFIG_PACKAGE_uugamebooster=y
+# CONFIG_PACKAGE_uugamebooster is not set
 CONFIG_PACKAGE_v2ray-core=y
 # CONFIG_PACKAGE_v2ray-example is not set
 # CONFIG_PACKAGE_v2ray-extra is not set
