--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -55,6 +55,7 @@ jobs:
         working-directory: /workdir
         run: |
           git clone $REPO_URL -b $REPO_BRANCH openwrt
+          ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
       - name: Load Custom Feeds
         run: |
