--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -55,39 +55,40 @@ jobs:
         working-directory: /workdir
         run: |
           git clone $REPO_URL -b $REPO_BRANCH openwrt
+          ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
       - name: Load Custom Feeds
         run: |
-          [ -e $FEEDS_CONF ] && cp -r $FEEDS_CONF /workdir/openwrt/feeds.conf.default
+          [ -e $FEEDS_CONF ] && cp -r $FEEDS_CONF openwrt/feeds.conf.default
           chmod +x $DIY_P1_SH
-          cd /workdir/openwrt
+          cd openwrt
           $GITHUB_WORKSPACE/$DIY_P1_SH
 
       - name: Update Feeds
-        run: cd /workdir/openwrt && ./scripts/feeds update -a
+        run: cd openwrt && ./scripts/feeds update -a
 
       - name: Install Feeds
-        run: cd /workdir/openwrt && ./scripts/feeds install -a
+        run: cd openwrt && ./scripts/feeds install -a
 
       - name: Make Defconfig Custom Configuration
         run: |
           chmod +x $DIY_P2_SH
-          cd /workdir/openwrt
+          cd openwrt
           $GITHUB_WORKSPACE/$DIY_P2_SH
           
           cd ..
           platforms=(armv8)
           for i in "${platforms[@]}"; do
-            [ -e $CONFIGS/$i.config ] && cp -r $CONFIGS/$i.config /workdir/openwrt/.config
-            cd /workdir/openwrt
+            [ -e $CONFIGS/$i.config ] && cp -r $CONFIGS/$i.config openwrt/.config
+            cd openwrt
             echo ""
             echo "make defconfig for $i platform....."
             echo "result:"
             make defconfig
             cd ..
-            cp -f /workdir/openwrt/.config $CONFIGS/$i.config
+            cp -f openwrt/.config $CONFIGS/$i.config
           done
-          cd /workdir/openwrt
+          cd openwrt
           rm -rf .config
 
       - name: Git Auto Update Config
