--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -40,13 +40,22 @@ jobs:
     outputs:
       output_release_tag: ${{ steps.gen_release_tag.outputs.release_tag }}
     steps:
+      - name: Generate Tag Name
+        id: gen_release_tag
+        run: |
+          echo "release_tag=multi-platform_$(date +"%Y.%m.%d_%H.%M.%S")" >> $GITHUB_OUTPUT
+          sudo timedatectl set-timezone "$TZ"
+          sudo mkdir -p /workdir
+          sudo chown $USER:$GROUPS /workdir
+          
       - name: Checkout
         uses: actions/checkout@main
 
       - name: Clone Source Code
-        working-directory: $GITHUB_WORKSPACE
+        working-directory: /workdir
         run: |
           git clone $REPO_URL -b $REPO_BRANCH openwrt
+          ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
       - name: Load Custom Feeds
         run: |
