--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -263,6 +263,14 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
+
+        sed -i 's/CONFIG_PACKAGE_kmod-mt76-connac=y/# CONFIG_PACKAGE_kmod-mt76-connac is not set/g' .config
+
+        sed -i 's/CONFIG_PACKAGE_kmod-mt76-core=y/# CONFIG_PACKAGE_kmod-mt76-core is not set/g' .config
+
+        sed -i 's/CONFIG_PACKAGE_kmod-mt76-sdio=y/# CONFIG_PACKAGE_kmod-mt76-sdio is not set/g' .config
+
+        sed -i 's/CONFIG_PACKAGE_kmod-mt76-usb=y/# CONFIG_PACKAGE_kmod-mt76-usb is not set/g' .config
         
         sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_5_4=y/g' .config
         
