--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -107,6 +107,7 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
         cd openwrt
+        Revision=$(grep "DISTRIB_REVISION=" package/lean/default-settings/files/zzz-default-settings | awk -F"'" '{print $2}')
         Author=$(git show -s --date=short --format="Author: %an")
         Date=$(git show -s --date=short --format="date: %ci")
         Commit=$(git show -s --date=short --format="commit: %s")
@@ -119,6 +120,7 @@ jobs:
         echo "TAG=$(date "+%Y%m%d")" >> $GITHUB_ENV
         echo "TAG=$(date "+%Y%m%d")" >> $GITHUB_ENV
         echo "start=$(date +%s)" >> $GITHUB_ENV
+        echo "revision=$Revision" >> $GITHUB_ENV
     
     - name: Package Armvirt as OpenWrt
       if: (!cancelled())
@@ -128,7 +130,7 @@ jobs:
         PACKAGE_SOC: ${{ github.event.inputs.openwrt_soc }}
         WHOAMI: Jejz
         OPENWRT_VER: ${{ github.event.inputs.openwrt_version }}
-        DISTRIB_REVISION: ${OPENWRT_VER} (By @Jejz build $(TZ=UTC-8 date "+%Y-%m-%d %H:%M"))
+        DISTRIB_REVISION: ${{env.revision} (By @Jejz build $(TZ=UTC-8 date "+%Y-%m-%d %H:%M"))
         KERNEL_REPO_URL: https://github.com/${{ github.event.inputs.kernel_download }}/releases/tag/kernel_stable
         KERNEL_VERSION_NAME: ${{ github.event.inputs.kernel_version }}
         KERNEL_AUTO_LATEST: true
